# data.naturalcapitalproject.stanford.edu

./: .env-localdev  .env.example  .gitignore  .gitmodules  Makefile  docker-compose.dev.yml  docker-compose.yml
src/ckanext-natcap/: MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  test.ini
src/ckanext-natcap/.github/workflows/: test.yml
src/ckanext-natcap/ckanext/natcap/: cli.py  helpers.py  invest_keywords.json  natcap_dataset_schema.yml  plugin.py  topic_keywords.json  update_dataset.py  views.py
src/ckanext-natcap/ckanext/natcap/assets/: script.js  webassets.yml
src/ckanext-natcap/ckanext/natcap/assets/css/: natcap.css
src/ckanext-natcap/ckanext/natcap/assets/js/: natcap-advanced-search.js  natcap-facet-collapse.js  natcap-spatial-query.js  natcap-textarea-copy.js
src/ckanext-natcap/ckanext/natcap/logic/: action.py  auth.py  schema.py  validators.py
src/ckanext-natcap/ckanext/natcap/public/: README.txt  natcap.css
src/ckanext-natcap/ckanext/natcap/templates/: base.html  footer.html  header.html  page.html
src/ckanext-natcap/ckanext/natcap/templates/home/: index.html
src/ckanext-natcap/ckanext/natcap/templates/home/snippets/: invest.html  invest_model.html  location_search.html  search.html  topic.html  topics.html
src/ckanext-natcap/ckanext/natcap/templates/package/: read.html  read_base.html  resources.html  search.html
src/ckanext-natcap/ckanext/natcap/templates/package/snippets/: additional_info.html  advanced_search_modal.html  citation.html  code_copy.html  (+11 more)
src/ckanext-natcap/ckanext/natcap/templates/snippets/: facet_list.html  package_item.html  search_form.html
src/ckanext-natcap/ckanext/natcap/tests/: test_helpers.py  test_plugin.py  test_views.py
src/ckanext-natcap/ckanext/natcap/tests/logic/: test_action.py  test_auth.py  test_validators.py
(+62 files in other folders)
